2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/strbcm.refs: updates for release
	* doc/man/man5/strbcm.5.man: updates for release
	* doc/manual/descrip.texi: updates for release

2006-10-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man5/strbcm.5.man: updated for make check

2006-10-05  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/manual/descrip.texi: updates for release
	* doc/manual/news.texi: updates for release

2006-10-03  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/Makefile.am: rename manual pages
	* doc/manual/descrip.texi: updated release notes
	* doc/manual/news.texi: updated release notes
	* doc/manual/todo.texi: updated release notes
	* lib32/Makefile.am: remove AUTOCONFIG_H
	* Makefile.am: remove AUTOCONFIG_H
	* pkg/Config: remove redundant entries
	* src/include/Makefile.am: parameterize
	* src/include/sys/strbcm/config.h.in: added comments
	* src/include/sys/strbcm/version.h.in: added comments

	* doc/man/man4/tstdrv.4.man: added missing manpage
	* doc/man/man4/tstmod.4.man: added missing manpage
	* doc/man/man8/test-bcm.8.man: added missing manpage
	* src/drivers/tstdrv.c: added: renamed
	* src/drivers/tstdrv.h: added: renamed
	* src/modules/tstmod.c: added: renamed
	* src/modules/tstmod.h: added: renamed
	* src/drivers/testdrv.c: removed: renamed
	* src/drivers/testdrv.h: removed: renamed
	* src/modules/testmod.c: removed: renamed
	* src/modules/testmod.h: removed: renamed

2006-10-02  Brian Bidulock  <bidulock@openss7.org>

	* strbcm.spec.in: corrections, cooked manpages and documentation
	* debian/changelog: notes
	* debian/control.in: mostly text description formatting
	* debian/strbcm-core.postrm.in: copyright header updates