@@ -2,7 +2,7 @@
 # BEGINNING OF SEPARATE COPYRIGHT MATERIAL vim: ft=config sw=4 noet nocindent
 # =============================================================================
 # 
-# @(#) $RCSfile: acinclude.m4,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2006/09/18 13:20:08 $
+# @(#) $RCSfile: acinclude.m4,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2006/10/12 10:20:40 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -47,11 +47,14 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/09/18 13:20:08 $ by $Author: brian $
+# Last Modified $Date: 2006/10/12 10:20:40 $ by $Author: brian $
 #
 # -----------------------------------------------------------------------------
 #
 # $Log: acinclude.m4,v $
+# Revision 0.9.2.6  2006/10/12 10:20:40  brian
+# - removed redundant debug flags
+#
 # Revision 0.9.2.5  2006/09/18 13:20:08  brian
 # - better directory detection
 #
@@ -171,38 +174,6 @@ AC_DEFUN([_BCM_OPTIONS], [dnl
 # =============================================================================
 
 # =============================================================================
-# _BCM_SETUP_DEBUG
-# -----------------------------------------------------------------------------
-AC_DEFUN([_BCM_SETUP_DEBUG], [dnl
-    case "$linux_cv_debug" in
-	_DEBUG)
-	    AC_DEFINE_UNQUOTED([CONFIG_STREAMS_DEBUG], [], [Define to perform
-		    internal structure tracking within the STREAMS executive
-		    as well as to provide additional /proc filesystem files
-		    for examining internal structures.])
-	    ;;
-	_TEST)
-	    AC_DEFINE_UNQUOTED([CONFIG_STREAMS_TEST], [], [Define to perform
-		    performance testing with debugging.  This mode does not
-		    dump massive amounts of information into system logs, but
-		    peforms all assertion checks.])
-	    ;;
-	_SAFE)
-	    AC_DEFINE_UNQUOTED([CONFIG_STREAMS_SAFE], [], [Define to perform
-		    fundamental assertion checks.  This is a safer mode of
-		    operation.])
-	    ;;
-	_NONE | *)
-	    AC_DEFINE_UNQUOTED([CONFIG_STREAMS_NONE], [], [Define to perform
-		    no assertion checks but report software errors.  This is
-		    the smallest footprint, highest performance mode of
-		    operation.])
-	    ;;
-    esac
-])# _BCM_SETUP_DEBUG
-# =============================================================================
-
-# =============================================================================
 # _BCM_SETUP
 # -----------------------------------------------------------------------------
 AC_DEFUN([_BCM_SETUP], [dnl
@@ -211,7 +182,6 @@ AC_DEFUN([_BCM_SETUP], [dnl
     _GENKSYMS
     # here we have our flags set and can perform preprocessor and compiler
     # checks on the kernel
-    _BCM_SETUP_DEBUG
     _LINUX_STREAMS
     _STRCOMP
 ])# _BCM_SETUP
